ops/kubernetes/ha/providers/gke/https-httproute.example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attestor-api-http-redirect
spec:
  hostnames:
    - attestor.example.com
  parentRefs:
    - name: attestor
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attestor-api-https
spec:
  hostnames:
    - attestor.example.com
  parentRefs:
    - name: attestor
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: attestor-api
          port: 80
